--- a/HomeworkWeek10/index.html
+++ b/HomeworkWeek10/index.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Data Visualisation 2</title>
+    <title>Data Visualization 2</title>
 
     <!-- Import Vega & Vega-Lite (does not have to be from CDN) -->
     <script src="https://cdn.jsdelivr.net/npm/vega@5"></script>
     <script src="https://cdn.jsdelivr.net/npm/vega-lite@5"></script>
     <script src="https://cdn.jsdelivr.net/npm/vega-embed@6"></script>
 
-  <!-- Import pure.css -->
+    <!-- Import pure.css -->
     <link rel="stylesheet" href="https://unpkg.com/purecss@2.0.3/build/pure-min.css"
     integrity="sha384-cg6SkqEOCV1NbJoCu11+bm0NvBRc8IYLRGXkmNrqUBfTjmMYwNKPWBTIKyw9mHNJ" crossorigin="anonymous">
     <link rel="stylesheet" href="css/style.css">
@@ -18,23 +18,22 @@
 </head>
 <body>
     <div class="pure-g center">
-      <div id="vis1" class="pure-u-10-24"></div>
-      <div id="vis2" class="pure-u-10-24"></div>
+        <div id="vis1" class="pure-u-10-24"></div>
+    </div>
+    <div class="pure-g center">
+        <div id="vis2" class="pure-u-10-24"></div>
     </div>
 
-
     <script type="text/javascript">
+        var spec1 = "js/choropleth_map.vg.json";
+        var spec2 = "js/barchart.vg.json";
 
-      var spec1 = "js/choropleth_map.vg.json";
-      var spec2 = "js/barchart.vg.json";
-  
-      vegaEmbed('#vis1', spec1).then(function(result) {
-        // Access the Vega view instance (https://vega.github.io/vega/docs/api/view/) as result.view
-      }).catch(console.error);
-      vegaEmbed('#vis2', spec2).then(function(result) {
-        // Access the Vega view instance (https://vega.github.io/vega/docs/api/view/) as result.view
-      }).catch(console.error);
+        vegaEmbed('#vis1', spec1).then(function(result) {
+            // Access the Vega view instance (https://vega.github.io/vega/docs/api/view/) as result.view
+        }).catch(console.error);
+        vegaEmbed('#vis2', spec2).then(function(result) {
+            // Access the Vega view instance (https://vega.github.io/vega/docs/api/view/) as result.view
+        }).catch(console.error);
     </script>
-
 </body>
 </html>
