--- a/HomeworkWeek10/index.html
+++ b/HomeworkWeek10/index.html
@@ -13,7 +13,29 @@
     <!-- Import pure.css -->
     <link rel="stylesheet" href="https://unpkg.com/purecss@2.0.3/build/pure-min.css"
     integrity="sha384-cg6SkqEOCV1NbJoCu11+bm0NvBRc8IYLRGXkmNrqUBfTjmMYwNKPWBTIKyw9mHNJ" crossorigin="anonymous">
+    
+    <!-- Your custom CSS styles -->
     <link rel="stylesheet" href="css/style.css">
+
+    <style>
+        /* Additional inline styles can be added here */
+        .center {
+            display: flex;
+            justify-content: center;
+            flex-direction: column;
+            align-items: center;
+        }
+
+        /* CSS to control the positioning of vis2 */
+        #vis1 {
+            margin-bottom: 20px; /* Adjust the margin as needed to control the spacing between vis1 and vis2 */
+        }
+
+        body {
+            margin: 0; /* Set the body margin to zero to remove any default spacing */
+        }
+    </style>
+
     <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
