--- a/DataVisualisation2/index2.html
+++ b/DataVisualisation2/index2.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>World Happiness</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -20,5 +20,21 @@
     <blockquote>"There is only one way to happiness and that is to cease worrying about things which are beyond the power of your will."</blockquote>
     </section>
     </main>
+
+<script type="text/javascript">
+
+var vg1 = "choroplethmap.json";
+vegaEmbed("#choropleth_map",vg1).then(function (result){
+}).catch(console.error);
+var vg2 = "GDPbarchart.json";
+vegaEmbed("#GDPbarchart",vg2).then(function (result){
+}).catch(console.error);
+var vg3 = "Healthybarchart.json";
+vegaEmbed("#Healthybarchart",vg3).then(function (result){
+}).catch(console.error);
+var vg4 = "Freedombarchart.json";
+vegaEmbed("#Freedombarchart",vg4).then(function (result){
+}).catch(console.error);
+</script>
 </body>
 </html>
