--- a/DataVisualisation2/index.html
+++ b/DataVisualisation2/index.html
@@ -7,10 +7,6 @@
     <script src="https://cdn.jsdelivr.net/npm/vega@5.20.2"></script>
     <script src="https://cdn.jsdelivr.net/npm/vega-lite@5.1.0"></script>
     <script src="https://cdn.jsdelivr.net/npm/vega-embed@6.17.0"></script>
-    <script src="choroplethmap.js"></script>
-    <script src="GDPbarchart.js"></script>
-    <script src="Healthybarchart.js"></script>
-    <script src="Freedombarchart.js"></script>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -39,6 +35,20 @@
     </section>
     </main>
     
+<script type="text/javascript">
+
+var vg1 = "choroplethmap.json";
+vegaEmbed("#choropleth_map",vg1).then(function (result){
+}).catch(console.error);
+var vg2 = "GDPbarchart.json";
+vegaEmbed("#GDPbarchart",vg2).then(function (result){
+}).catch(console.error);
+var vg3 = "Healthybarchart.json";
+vegaEmbed("#Healthybarchart",vg3).then(function (result){
+}).catch(console.error);
+var vg4 = "Freedombarchart.json";
+vegaEmbed("#Freedombarchart",vg4).then(function (result){
+}).catch(console.error);
 </script>
 </body>
 </html>
