--- a/DataVisualisation2/index1.html
+++ b/DataVisualisation2/index1.html
@@ -16,7 +16,7 @@
     <ul>
         <li><a href="#">2015</a></li>
         <li><a href="#">2016</a></li>
-        <li><a href="index2.html">Home</a></li>
+        <li><a href="index.html">Home</a></li>
         <li><a href="#">2017</a></li>
         <li><a href="#">2018</a></li>
     </ul>
