--- a/DataVisualisation2/index1.html
+++ b/DataVisualisation2/index1.html
@@ -37,16 +37,16 @@
     
 <script type="text/javascript">
 
-var vg1 = "choroplethmap.json";
+var vg1 = "js/choroplethmap.vg.json";
+var vg2 = "js/GDPbarchart.vg.json";
+var vg3 = "js/Healthybarchart.vg.json";
+var vg4 = "js/Freedombarchart.vg.json";
 vegaEmbed("#choropleth_map",vg1).then(function (result){
 }).catch(console.error);
-var vg2 = "GDPbarchart.json";
 vegaEmbed("#GDPbarchart",vg2).then(function (result){
 }).catch(console.error);
-var vg3 = "Healthybarchart.json";
 vegaEmbed("#Healthybarchart",vg3).then(function (result){
 }).catch(console.error);
-var vg4 = "Freedombarchart.json";
 vegaEmbed("#Freedombarchart",vg4).then(function (result){
 }).catch(console.error);
 </script>
