--- a/DataVisualisation2/2019.html
+++ b/DataVisualisation2/2019.html
@@ -7,7 +7,7 @@
     <script src="https://cdn.jsdelivr.net/npm/vega@5.20.2"></script>
     <script src="https://cdn.jsdelivr.net/npm/vega-lite@5.1.0"></script>
     <script src="https://cdn.jsdelivr.net/npm/vega-embed@6.17.0"></script>
-    <link rel="stylesheet" href="style.css" media="all">
+    <link rel="stylesheet" href="css/style.css" media="all">
 </head>
 <header>
     <h1>World Happiness 2019</h1>
