--- a/DataVisualisation2/index.html
+++ b/DataVisualisation2/index.html
@@ -14,7 +14,7 @@
         <li><a href="#">2015</a></li>
         <li><a href="#">2016</a></li>
         <li><a href="#">2017</a></li>
-        <li><a href="#">2018</a></li>
+        <li><a href="2018.html">2018</a></li>
         <li><a href="2019.html">2019</a></li>
     </ul>
     <blockquote>"There is only one way to happiness and that is to cease worrying about things which are beyond the power of your will."</blockquote>
