--- a/DataVisualisation2/2017.html
+++ b/DataVisualisation2/2017.html
@@ -12,8 +12,8 @@
 <header>
     <h1>World Happiness 2017</h1>
     <ul>
-        <li><a href="#">2015</a></li>
-        <li><a href="#">2016</a></li>
+        <li><a href="2015.html">2015</a></li>
+        <li><a href="2016.html">2016</a></li>
         <li><a href="index.html">Home</a></li>
         <li><a href="2018.html">2018</a></li>
         <li><a href="2019.html">2019</a></li>
