--- a/DataVisualisation2/index.html
+++ b/DataVisualisation2/index.html
@@ -11,8 +11,8 @@
     <section class="new">
     <h1>World Happiness</h1>
     <ul>
-        <li><a href="#">2015</a></li>
-        <li><a href="#">2016</a></li>
+        <li><a href="2015.html">2015</a></li>
+        <li><a href="2016.html">2016</a></li>
         <li><a href="2017.html">2017</a></li>
         <li><a href="2018.html">2018</a></li>
         <li><a href="2019.html">2019</a></li>
