--- a/DataVisualisation2/2019.html
+++ b/DataVisualisation2/2019.html
@@ -50,6 +50,10 @@
     <section class="content">
         <p>The bar chart above displays the <span class="purple">Freedom to make life choice</span> for each <span class="blue">country</span>. <span class="purple">"Freedom to make life choices"</span> signifies the liberty for individuals to decide and pursue their personal, professional, and social preferences without significant external restrictions, contributing to personal autonomy and well-being. We categorize <span class="blue">countries</span> based on their <span class="brown">Happiness Scores</span>, and you can filter the display to show <span class="blue">countries</span> within a specific <span class="brown">Happiness Scores</span> range by selecting that range.</p></p>
     </section>
+    <section class="choropleth">
+    <h2><span class="purple">World Populationspan></h2>
+    <div id="Populationlinechart2019"></div>
+    </section>
     </main>
     
 <script type="text/javascript">
@@ -58,6 +62,7 @@ var vg1 = "js/choroplethmap2019.vg.json";
 var vg2 = "js/GDPbarchart2019.vg.json";
 var vg3 = "js/Healthybarchart2019.vg.json";
 var vg4 = "js/Freedombarchart2019.vg.json";
+var vg5 = "js/Populationlinechart2019.vg.json";
 vegaEmbed("#choropleth_map2019",vg1).then(function (result){
 }).catch(console.error);
 vegaEmbed("#GDPbarchart2019",vg2).then(function (result){
@@ -65,6 +70,8 @@ vegaEmbed("#GDPbarchart2019",vg2).then(function (result){
 vegaEmbed("#Healthybarchart2019",vg3).then(function (result){
 }).catch(console.error);
 vegaEmbed("#Freedombarchart2019",vg4).then(function (result){
+}).catch(console.error);
+vegaEmbed("#Populationlinechart2019",vg4).then(function (result){
 }).catch(console.error);
 </script>
 
