--- a/DataVisualisation2/2019.html
+++ b/DataVisualisation2/2019.html
@@ -54,6 +54,9 @@
         <h2><span class="purple">World Population</span></h2>
         <div id="Populationlinechart2019"></div>
     </section>
+    <section class="content">
+        <p>The bar chart above displays the <span class="purple">Freedom to make life choice</span> for each <span class="blue">country</span>. <span class="purple">"Freedom to make life choices"</span> signifies the liberty for individuals to decide and pursue their personal, professional, and social preferences without significant external restrictions, contributing to personal autonomy and well-being. We categorize <span class="blue">countries</span> based on their <span class="brown">Happiness Scores</span>, and you can filter the display to show <span class="blue">countries</span> within a specific <span class="brown">Happiness Scores</span> range by selecting that range.</p></p>
+    </section>
     </main>
     
 <script type="text/javascript">
