--- a/DataVisualisation2/2019.html
+++ b/DataVisualisation2/2019.html
@@ -71,10 +71,10 @@
 
 var vg1 = "js/choroplethmap2019.vg.json";
 var vg2 = "js/GDPbarchart2019.vg.json";
-var vg3 = "js/Healthybarchart2018.vg.json";
+var vg3 = "js/Healthybarchart2019.vg.json";
 var vg4 = "js/Freedombarchart2019.vg.json";
 var vg5 = "js/Populationlinechart2019.vg.json";
-var vg6 = "js/Healthybarchart2019.vg.json";
+var vg6 = "js/GDPscatterplot2019.vg.json";
 vegaEmbed("#choropleth_map2019",vg1).then(function (result){
 }).catch(console.error);
 vegaEmbed("#GDPbarchart2019",vg2).then(function (result){
