--- a/DataVisualisation2/2019.html
+++ b/DataVisualisation2/2019.html
@@ -29,6 +29,27 @@
     <section class="content">
         <p>The map above displays the <span class="brown">Happiness Scores</span> for each <span class="blue">country</span>. Darker colors represent higher <span class="brown">Happiness Scores</span>, such as <span class="blue">Australia</span>, <span class="blue">the United States</span>, <span class="blue">Canada</span>, and <span class="blue">Finland</span>. Gray indicates data absence, as seen in some <span class="blue">Middle Eastern countries</span>, <span class="blue">Greenland</span>, and <span class="blue">Antarctica</span>, where no relevant data is available.</p>
     </section>
+        <section class="choropleth">
+        <h2><span class="red">GDP</span> of Each <span class="blue">Country</span></h2>
+        <div id="GDPbarchart2019"></div>
+    </section>
+    <section class="content">
+        <p>The bar chart above displays the <span class="red">GDP (Gross Domestic Product)</span> for each <span class="blue">country</span>. <span class="red">Gross Domestic Product (GDP)</span> is a key economic metric that quantifies the total market value of all goods and services produced within a <span class="blue">country</span> and is used to evaluate its economic performance. We categorize <span class="blue">countries</span> based on their <span class="brown">Happiness Scores</span>, and you can filter the display to show <span class="blue">countries</span> within a specific <span class="brown">Happiness Scores</span> range by selecting that range.</p>
+    </section>
+    <section class="choropleth">
+        <h2><span class="yellow">Healthy Life Expectancy</span> of Each <span class="blue">Country</span></h2>
+        <div id="Healthybarchart2019"></div>
+    </section>
+    <section class="content">
+        <p>The bar chart above displays the <span class="yellow">Healthy Life Expectancy</span> for each <span class="blue">country</span>. <span class="yellow">Healthy Life Expectancy</span> refers to the number of years an individual is expected to live in good health without experiencing significant illness or disability. We categorize <span class="blue">countries</span> based on their <span class="brown">Happiness Scores</span>, and you can filter the display to show <span class="blue">countries</span> within a specific <span class="brown">Happiness Scores</span> range by selecting that range.</p>
+    </section>
+    <section class="choropleth">
+        <h2><span class="purple">Freedom to make life choice</span> of Each <span class="blue">Country</span></h2>
+        <div id="Freedombarchart2019"></div>
+    </section>
+    <section class="content">
+        <p>The bar chart above displays the <span class="purple">Freedom to make life choice</span> for each <span class="blue">country</span>. <span class="purple">"Freedom to make life choices"</span> signifies the liberty for individuals to decide and pursue their personal, professional, and social preferences without significant external restrictions, contributing to personal autonomy and well-being. We categorize <span class="blue">countries</span> based on their <span class="brown">Happiness Scores</span>, and you can filter the display to show <span class="blue">countries</span> within a specific <span class="brown">Happiness Scores</span> range by selecting that range.</p></p>
+    </section>
     <section class="choropleth">
         <h2><span class="purple">World Population</span></h2>
         <div id="Populationlinechart2019"></div>
