--- a/DataVisualisation2/2018.html
+++ b/DataVisualisation2/2018.html
@@ -50,6 +50,27 @@
     <section class="content">
         <p>The bar chart above displays the <span class="purple">Freedom to make life choice</span> for each <span class="blue">country</span>. <span class="purple">"Freedom to make life choices"</span> signifies the liberty for individuals to decide and pursue their personal, professional, and social preferences without significant external restrictions, contributing to personal autonomy and well-being. We categorize <span class="blue">countries</span> based on their <span class="brown">Happiness Scores</span>, and you can filter the display to show <span class="blue">countries</span> within a specific <span class="brown">Happiness Scores</span> range by selecting that range.</p></p>
     </section>
+        <section class="choropleth">
+        <h2><span class="purple">Correlation between <span class="brown">Happiness Score</span> and <span class="red">GDP</span></span></h2>
+    <div id="GDPscatterplot2018"></div>
+    </section>
+    <section class="content">
+        <p>The scatter plot visualizes the correlation between <span class="brown">Happiness Score</span> and <span class="red">GDP</span>, it clearly shows that higher <span class="red">GDP</span> brings higher <span class="brown">Happiness Score</span>.</p>
+    </section>
+    <section class="choropleth">
+        <h2><span class="purple">Correlation between <span class="brown">Happiness Score</span> and <span class="yellow">Healthy life expectancy</span></span></h2>
+        <div id="Healthyscatterplot2018"></div>
+    </section>
+    <section class="content">
+        <p>The scatter plot visualizes the correlation between <span class="brown">Happiness Score</span> and <span class="yellow">Healthy life expectancy</span>, it clearly shows that higher <span class="yellow">Healthy life expectancy</span> brings higher <span class="brown">Happiness Score</span>.</p>
+    </section>
+    <section class="choropleth">
+        <h2><span class="purple">Correlation between <span class="brown">Happiness Score</span> and <span class="purple">Freedom to make life choices</span></h2>
+        <div id="Freedomscatterplot2018"></div>
+    </section>
+    <section class="content">
+        <p>The scatter plot visualizes the correlation between <span class="brown">Happiness Score</span> and <span class="purple">Freedom to make life choices</span>, it clearly shows that higher <span class="purple">Freedom to make life choices</span> brings higher <span class="brown">Happiness Score</span>.</p>
+    </section>
     </main>
     
 <script type="text/javascript">
